fix: long quotes break the UI
* On using quote plugin with multiple plugins then on receiving long quote text break the layout
  because of no space availability on window screen as it's viewport size is fixed to user screen.
  - To fix that I have limit the quote container height and add a scrollbar to view the overflow
    content.

* Other change is that I have add a linear gradient of black color overlay to background image because
  in most cases white text is not properly visible on screen.

--- a/src/plugins/widgets/quote/Quote.sass
+++ b/src/plugins/widgets/quote/Quote.sass
@@ -1,2 +1,12 @@
-h4.Quote
-    line-height: 1.25 !important
+.Quote
+    overflow-y: auto
+    visibility: hidden
+    min-height: 18vh
+    max-height: 25vh
+
+    h4
+        line-height: 1.25 !important
+        visibility: visible
+
+    &:hover
+        visibility: visible
